[tool.poetry]
name = "socpi"
version = "0.1.0"
description = "A socket api framework"
authors = ["Grzegorz Koperwas <admin@grzegorzkoperwas.site>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
